click able ref link

--- a/report.tex
+++ b/report.tex
@@ -4,7 +4,7 @@
 \usepackage{url} %for proper url entries
 \usepackage{svg}
 \usepackage{titlesec}
-\usepackage{xcolor}
+\usepackage[colorlinks=true, linkcolor=black]{hyperref}
 \usepackage{listings}
 \usepackage{sqlSyntex}
 % format chapter title
