ref page removed

--- a/report.tex
+++ b/report.tex
@@ -27,6 +27,6 @@
 
 \input{Chapter 1/introduction.tex}
 \input{Chapter 2/Diagrams.tex}
-\input{reference/ref.tex}
+% \input{reference/ref.tex}
 
 \end{document}
