--- a/report.tex
+++ b/report.tex
@@ -7,6 +7,7 @@
 \usepackage[colorlinks=true, linkcolor=black]{hyperref}
 \usepackage{listings}
 \usepackage{sqlSyntex}
+\usepackage[labelformat=empty]{caption}
 % format chapter title
 \titleformat{\chapter}[display]
 {\normalfont \bfseries}{\hrulefill}{0pt}{\Huge}
@@ -27,6 +28,7 @@
 
 \input{Chapter 1/introduction.tex}
 \input{Chapter 2/Diagrams.tex}
+\input{Chapter 3/user-interface.tex}
 % \input{reference/ref.tex}
 
 \end{document}
