--- a/report.tex
+++ b/report.tex
@@ -7,6 +7,7 @@
 \usepackage[colorlinks=true, linkcolor=black]{hyperref}
 \usepackage{listings}
 \usepackage{sqlSyntex}
+\usepackage{lipsum}
 \usepackage[labelformat=empty]{caption}
 % format chapter title
 \titleformat{\chapter}[display]
