--- a/report.tex
+++ b/report.tex
@@ -30,6 +30,7 @@
 \input{Chapter 1/introduction.tex}
 \input{Chapter 2/Diagrams.tex}
 \input{Chapter 3/user-interface.tex}
+\input{Chapter 4/Normalization.tex}
 % \input{reference/ref.tex}
 
 \end{document}
