--- a/report.tex
+++ b/report.tex
@@ -31,6 +31,7 @@
 \input{Chapter 2/Diagrams.tex}
 \input{Chapter 3/user-interface.tex}
 \input{Chapter 4/Normalization.tex}
+\input{Chapter 5/Table-cration.tex}
 % \input{reference/ref.tex}
 
 \end{document}
