--- a/report.tex
+++ b/report.tex
@@ -32,6 +32,7 @@
 \input{Chapter 3/user-interface.tex}
 \input{Chapter 4/Normalization.tex}
 \input{Chapter 5/Table-cration.tex}
+\input{Chapter 6/relational-algebra.tex}
 % \input{reference/ref.tex}
 
 \end{document}
