--- a/report.tex
+++ b/report.tex
@@ -33,6 +33,7 @@
 \input{Chapter 4/Normalization.tex}
 \input{Chapter 5/Table-cration.tex}
 \input{Chapter 6/relational-algebra.tex}
+\input{Final Page/conclusion.tex}
 % \input{reference/ref.tex}
 
 \end{document}
