--- a/FrontPages/contribution.tex
+++ b/FrontPages/contribution.tex
@@ -21,12 +21,48 @@
          & \multicolumn{1}{c}{}                          \\
         \cline{2-6}
 
-        \multicolumn{1}{r|}{Ideas}
-         & \multicolumn{1}{c|}{25\%}
-         & \multicolumn{1}{c|}{25\%}
-         & \multicolumn{1}{c|}{25\%}
-         & \multicolumn{1}{c|}{25\%}
-         & \multicolumn{1}{c|}{100(\%)}                  \\
+        \multicolumn{1}{r|}{Diagram}
+         & \multicolumn{1}{c|}{10\%}
+         & \multicolumn{1}{c|}{10\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{20(\%)}                   \\
+        \cline{2-6}
+        \multicolumn{1}{r|}{UI Design}
+         & \multicolumn{1}{c|}{50\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{50(\%)}                   \\
+        \cline{2-6}
+        \multicolumn{1}{r|}{Normalization}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{70\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{70(\%)}                   \\
+        \cline{2-6}
+        \multicolumn{1}{r|}{SQL Query}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0(\%)}                    \\
+        \cline{2-6}
+        \multicolumn{1}{r|}{Relational Algebra}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0(\%)}                    \\
+        \cline{2-6}
+
+        \multicolumn{1}{r|}{Report Writing}
+         & \multicolumn{1}{c|}{30\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{0\%}
+         & \multicolumn{1}{c|}{30(\%)}                    \\
         \cline{2-6}
     \end{tabular}
 \end{table}
