--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,7 @@
 \usepackage{listings}
 \usepackage{sqlSyntex}
 \usepackage{lipsum}
+\usepackage[normalem]{ulem}
 \usepackage[labelformat=empty]{caption}
 % format chapter title
 \titleformat{\chapter}[display]
