--- a/report.tex
+++ b/report.tex
@@ -32,7 +32,7 @@
 \input{Chapter 2/Diagrams.tex}
 \input{Chapter 3/user-interface.tex}
 \input{Chapter 4/Normalization.tex}
-\input{Chapter 5/Table-cration.tex}
+\input{Chapter 5/Sql-Query.tex}
 \input{Chapter 6/relational-algebra.tex}
 \input{Final Page/conclusion.tex}
 % \input{reference/ref.tex}
