--- a/Final Page/conclusion.tex
+++ b/Final Page/conclusion.tex
@@ -1,4 +1,6 @@
 \chapter{Conclusion}
 \hrulefill
 
-\lipsum[1-5]
+In conclusion, the project for the development and implementation of an Esports Management System has outlined a revolutionary platform that aims to transform the management and organization of esports teams, players, tournaments, and sponsors. The proposed system seeks to improve user experience, encourage community engagement, and streamline operations within the esports industry by leveraging advanced technology and comprehensive functionalities.
+
+For the final term, we plans to enhance the existing project by developing a web application using Dotnet and Sveltekit frameworks. This transition to a web app will provide greater accessibility and flexibility to users, allowing them to access the Esports Management System from any device with an internet connection.
