--- a/FrontPages/title.tex
+++ b/FrontPages/title.tex
@@ -16,7 +16,7 @@
               \vspace{1cm}
               % Title
               \Large \textbf {E-Sports Management System}\\[0.2in]
-
+              \textbf{Group 5} \\[0.2in]
               % Submitted by
               \normalsize Submitted by \\
               \begin{table}[h]
