--- a/sqlSyntex.sty
+++ b/sqlSyntex.sty
@@ -4,7 +4,7 @@
 \lstdefinelanguage{SQL}{
   keywords={SELECT, FROM, WHERE, GROUP, BY, HAVING, ORDER, JOIN, ON, AS, AND, OR, NOT, NULL, INSERT, INTO, VALUES, UPDATE, SET, DELETE, FROM, CREATE, TABLE, SEQUENCE,VARCHAR ,REFERENCES,FOREIGN, KEY, INT, PRIMARY, DATE, DECIMAL, UNIQUE, ADD, CONSTRAINT, ALTER },
   keywordstyle=\color{blue},
-  morekeywords={AVG, VIEW,SYNONYM,FOR,DISTINCT,SUM,TO_DATE,COUNT,CONCAT,INSTR,SUBSTR,NEXTVAL},
+  morekeywords={AVG, VIEW,SYNONYM,FOR,DISTINCT,SUM,TO_DATE,COUNT,CONCAT,INSTR,SUBSTR,NEXTVAL, ALL, PRIVILEGES, TO, GRANT },
   sensitive=true,
   comment=[l]{--},
   morestring=[b]',
