final term plsql

--- a/sqlSyntex.sty
+++ b/sqlSyntex.sty
@@ -4,7 +4,7 @@
 \lstdefinelanguage{SQL}{
   keywords={SELECT, FROM, WHERE, GROUP, BY, HAVING, ORDER, JOIN, ON, AS, AND, OR, NOT, NULL, INSERT, INTO, VALUES, UPDATE, SET, DELETE, FROM, CREATE, TABLE, SEQUENCE,VARCHAR ,REFERENCES,FOREIGN, KEY, INT, PRIMARY, DATE, DECIMAL, UNIQUE, ADD, CONSTRAINT, ALTER },
   keywordstyle=\color{blue},
-  morekeywords={AVG, VIEW,SYNONYM,FOR,DISTINCT,SUM,TO_DATE,COUNT,CONCAT,INSTR,SUBSTR,NEXTVAL, ALL, PRIVILEGES, TO, GRANT },
+  morekeywords={AVG, VIEW,SYNONYM,FOR,DISTINCT,SUM,TO_DATE,COUNT,CONCAT,INSTR,SUBSTR,NEXTVAL, ALL, PRIVILEGES, TO, GRANT, BEGIN, RETURN, END, IS, NUMBER, VARCHAR2, \%TYPE, REPLACE, FUNCTION,DBMS_OUTPUT,PUT_LINE,EXCEPTION,WHEN, OTHERS, THEN,ROLLBACK,COMMIT ,MAX,PROCEDURE ,DECLARE, TYPE, RECORD,CURSOR,LOOP,IN,OUT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WHILE,EXECUTE,IMMEDIATE,USING,LIKE,IN,OUT,INOUT,TRIGGER,NEW,OLD,IS,NOT,IF,ELSE,ELSIF,OPEN,FETCH,CLOSE,EXIT,WH, },
   sensitive=true,
   comment=[l]{--},
   morestring=[b]',
