contribution part updated

--- a/FrontPages/contribution.tex
+++ b/FrontPages/contribution.tex
@@ -64,5 +64,12 @@
          & \multicolumn{1}{c|}{5\%}
          & \multicolumn{1}{c|}{100(\%)}                    \\
         \cline{2-6}
+        \multicolumn{1}{r|}{App Coding}
+         & \multicolumn{1}{c|}{40\%}
+         & \multicolumn{1}{c|}{20\%}
+         & \multicolumn{1}{c|}{20\%}
+         & \multicolumn{1}{c|}{20\%}
+         & \multicolumn{1}{c|}{100(\%)}                    \\
+        \cline{2-6}
     \end{tabular}
 \end{table}
